# LegendServer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
config/: server.yaml
docs/: architecture.md  database.md  protocol.md
lua_scripts/: main.lua
lua_scripts/config/: item_config.lua  server_config.lua  skill_config.lua
lua_scripts/lib/: logger.lua  utils.lua
lua_scripts/modules/: battle.lua  chat.lua  friend.lua  login.lua  role.lua  team.lua
proto/: battle.proto  chat.proto  common.proto  login.proto  role.proto
scripts/: start.sh  stop.sh
sql/: init_data.sql  schema.sql
src/: CMakeLists.txt  main.cpp
src/common/base/: buffer.cpp  buffer.h  noncopyable.h  singleton.h  types.h
src/common/crypto/: aes.cpp  aes.h  md5.cpp  md5.h  random.cpp  random.h
src/common/network/: address.cpp  address.h  buffer_stream.cpp  buffer_stream.h  connection.cpp  connection.h  socket.cpp  socket.h
src/common/thread/: condition.cpp  condition.h  mutex.cpp  mutex.h  task_queue.cpp  task_queue.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h
src/common/timer/: timer.cpp  timer.h  timer_manager.cpp  timer_manager.h  timer_wheel.cpp  timer_wheel.h
src/core/message/: codec.cpp  codec.h  dispatcher.cpp  dispatcher.h  message.cpp  message.h  message_queue.cpp  message_queue.h
src/core/reactor/: channel.cpp  channel.h  epoll_poller.cpp  epoll_poller.h  event_loop.cpp  event_loop.h
src/core/server/: server.cpp  server.h  server_config.cpp  server_config.h  server_manager.cpp  server_manager.h
src/core/session/: session.cpp  session.h  session_manager.cpp  session_manager.h  session_pool.cpp  session_pool.h
src/database/mysql/: mysql_connection.cpp  mysql_connection.h  mysql_connection_pool.cpp  mysql_connection_pool.h  mysql_result.cpp  mysql_result.h  mysql_statement.cpp  mysql_statement.h
src/database/orm/: entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  query_builder.cpp  query_builder.h
src/database/redis/: redis_client.cpp  redis_client.h  redis_pool.cpp  redis_pool.h
src/game/: game_config.h  game_server.cpp  game_server.h
src/game/modules/battle/: battle_manager.cpp  battle_manager.h  battle_module.cpp  battle_module.h  battle_scene.cpp  battle_scene.h  skill_system.cpp  skill_system.h
src/game/modules/chat/: chat_channel.cpp  chat_channel.h  chat_module.cpp  chat_module.h
src/game/modules/friend/: friend_manager.cpp  friend_manager.h  friend_module.cpp  friend_module.h
src/game/modules/login/: login_handler.cpp  login_handler.h  login_module.cpp  login_module.h
src/game/modules/role/: role_data.cpp  role_data.h  role_manager.cpp  role_manager.h  role_module.cpp  role_module.h
src/game/modules/team/: team_manager.cpp  team_manager.h  team_module.cpp  team_module.h
src/game/scene/: aoi.cpp  aoi.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/gateway/: client_connection.cpp  client_connection.h  gateway_config.cpp  gateway_config.h  gateway_server.cpp  gateway_server.h  message_router.cpp  message_router.h
src/lua/: lua_engine.cpp  lua_engine.h  lua_function.h  lua_loader.cpp  lua_loader.h  lua_table.cpp  lua_table.h  lua_wrapper.cpp  lua_wrapper.h
tests/: CMakeLists.txt
